# air602-hello-world

./: .gitignore  CMakeLists.txt  local-example.cmake  toolchain.cmake
cmake/: formats.cmake  wm.cmake
hello_world/: CMakeLists.txt  main.c
libs/: CMakeLists.txt  sdk.cmake
libs/sdk/: lwip.cmake
libs/sdk/lwip_override/arch/: cc.h
tools/: upload.py
